Added pwmOut submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "components/ina226"]
 	path = components/ina226
 	url = https://github.com/vtothsvk/idf-ina226.git
+[submodule "components/pwmOut"]
+	path = components/pwmOut
+	url = https://github.com/vtothsvk/espPwmOut.git
